initialize student data crud application

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
     this is student data crud application
 
+    <p class="text-teal-500">created by <a href="https://github.com/deveripon" target="_blank">devripon</a></p>
+
   </h2>
 
 
