--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Start Kit With Tailwind and Sass</title>
+  <title>Login | Student Result Management System</title>
   <link rel="stylesheet" href="./public/src/css/style.css">
   <link rel="stylesheet" href="./public/src/css/custom.css">
   <script src="https://kit.fontawesome.com/2ab099f38c.js" crossorigin="anonymous"></script>
