--- a/public/pages/dashboard/dashboard.html
+++ b/public/pages/dashboard/dashboard.html
@@ -267,7 +267,7 @@
             <div class="add-form w-full flex justify-center items-center">
               <form action="" id="studentResultAddForm">
                 <h4 class="mt-5 font-bold text-xl mb-4">Add Student Result</h4>
-                <div id="massgae-area"></div>
+                <div id="alert-massage-area"></div>
 
                 <div class="input-group my-1">
                   <label class="text-sm font-medium" for="name">Student Name :</label>
