design result marksheet

--- a/public/pages/dashboard/dashboard.html
+++ b/public/pages/dashboard/dashboard.html
@@ -353,144 +353,11 @@
         <div class="modal-content">
           <div class="utlities">
             <button
-              class="border-1 border-gray-400 p-1 hover:bg-gray-300 transform duration-300 outline outline-slate-600 text-gray-700 rounded-md">Print</button>
-            <span class="close" id="closeResultModal">&times;</span>
+              class="border-1 border-gray-400 p-1 hover:bg-gray-300 transform duration-300 outline outline-slate-600 text-gray-700 rounded-md ">Print</button>
+            <span class="close" id="closeViewResultModal">&times;</span>
           </div>
-          <div class="main-content">
-            <div class="marksheet border-4 rounded-md border-green-800">
-              <div class="marksheet-header flex justify-center my-10 border-1 border-gray-700">
-                <img class="institute_logo w-48 h-28 object-fill" src="../../images/download.png"
-                  alt="institute logo" />
-                <div class="institute-info mt-8 px-7">
-                  <h2 class="text-4xl font-bold font-serif">
-                    Sorobindu Pilot High School
-                  </h2>
-                  <p>
-                    Chowrangi KachaBazar, Suihari, Dinajpur Sadar, Dinajpur
-                  </p>
-                  <h4 class="text-2xl font-medium">
-                    Secondary School Certificate - 2023
-                  </h4>
-                </div>
-                <img class="devripon_logo w-44" src="../../images/devriponlog.png" alt="devripon logo" />
-              </div>
-              <div class="student-info-area border-2 border-gray-700 py-5 w-11/12 block m-auto px-5">
-                <div class="info-group flex mt-2">
-                  <h4 class="pr-4 font-medium">Student Name :</h4>
-                  <p>Shahadat Hussain Ripon</p>
-                </div>
-                <div class="info-group flex mt-2">
-                  <h4 class="pr-4 font-medium">Father Name :</h4>
-                  <p>Shahadat Hussain Ripon</p>
-                </div>
-                <div class="info-group flex mt-2">
-                  <h4 class="pr-4 font-medium">Mother Name :</h4>
-                  <p>Shahadat Hussain Ripon</p>
-                </div>
-                <div class="info-group flex mt-2">
-                  <h4 class="pr-4 font-medium">Roll Number :</h4>
-                  <p>1133434245</p>
-                </div>
-                <div class="info-group flex mt-2">
-                  <h4 class="pr-4 font-medium">Registration Number :</h4>
-                  <p>1133434245</p>
-                </div>
-                <div class="info-group flex mt-2">
-                  <h4 class="pr-4 font-medium">Date of Birth :</h4>
-                  <p>1133434245</p>
-                </div>
-                <div class="info-group flex mt-2">
-                  <h4 class="pr-4 font-medium">Academic Year :</h4>
-                  <p>2023-2024</p>
-                </div>
-              </div>
+          <div class="main-content" id="resultBox">
 
-              <div class="result-area">
-                <table id="result-table"
-                  class="w-11/12 m-auto mt-5 table-auto border-collapse border-spacing-2 border border-slate-500 text-gray-700 text-sm">
-                  <thead class="border-1 border-gray-600 h-8 bg-slate-200">
-                    <th class="border-1 border-gray-600">Sl</th>
-                    <th class="border-1 border-gray-600">Subject Name</th>
-                    <th class="border-1 border-gray-600">Maximum Marks</th>
-                    <th class="border-1 border-gray-600">Obtained Marks</th>
-                    <th class="border-1 border-gray-600">GPA</th>
-                    <th class="border-1 border-gray-600">GRADE</th>
-                  </thead>
-                  <tbody class="border-1 h-8 m-auto text-center">
-                    <tr class="border-1 py-4 h-8 border-gray-800">
-                      <td class="border-1 border-gray-600">Sl</td>
-                      <td class="border-1 border-gray-600">Subject Name</td>
-                      <td class="border-1 border-gray-600">Maximum Marks</td>
-                      <td class="border-1 border-gray-600">Obtained Marks</td>
-                      <td class="border-1 border-gray-600">GPA</td>
-                      <td class="border-1 border-gray-600">GRADE</td>
-                    </tr>
-                    <tr class="border-1 py-4 h-8 border-gray-800">
-                      <td class="border-1 border-gray-600">Sl</td>
-                      <td class="border-1 border-gray-600">Subject Name</td>
-                      <td class="border-1 border-gray-600">Maximum Marks</td>
-                      <td class="border-1 border-gray-600">Obtained Marks</td>
-                      <td class="border-1 border-gray-600">GPA</td>
-                      <td class="border-1 border-gray-600">GRADE</td>
-                    </tr>
-                    <tr class="border-1 py-4 h-8 border-gray-800">
-                      <td class="border-1 border-gray-600">Sl</td>
-                      <td class="border-1 border-gray-600">Subject Name</td>
-                      <td class="border-1 border-gray-600">Maximum Marks</td>
-                      <td class="border-1 border-gray-600">Obtained Marks</td>
-                      <td class="border-1 border-gray-600">GPA</td>
-                      <td class="border-1 border-gray-600">GRADE</td>
-                    </tr>
-                    <tr class="border-1 py-4 h-8 border-gray-800">
-                      <td class="border-1 border-gray-600">Sl</td>
-                      <td class="border-1 border-gray-600">Subject Name</td>
-                      <td class="border-1 border-gray-600">Maximum Marks</td>
-                      <td class="border-1 border-gray-600">Obtained Marks</td>
-                      <td class="border-1 border-gray-600">GPA</td>
-                      <td class="border-1 border-gray-600">GRADE</td>
-                    </tr>
-                    <tr class="border-1 py-4 h-8 border-gray-800">
-                      <td class="border-1 border-gray-600">Sl</td>
-                      <td class="border-1 border-gray-600">Subject Name</td>
-                      <td class="border-1 border-gray-600">Maximum Marks</td>
-                      <td class="border-1 border-gray-600">Obtained Marks</td>
-                      <td class="border-1 border-gray-600">GPA</td>
-                      <td class="border-1 border-gray-600">GRADE</td>
-                    </tr>
-                    <tr class="border-1 bg-teal-100 py-4 h-8 border-gray-800">
-                      <td colspan="3" class="border-1 border-gray-600">CGPA : </td>
-                      <td colspan="3" class="border-1 border-gray-600">GRADE : </td>
-                    </tr>
-                    <tr class="border-1 bg-teal-100 py-4 h-8 border-gray-800">
-                      <td colspan="6" class="border-1 text-start pl-7 border-gray-600">Result : </td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-              <div class="signature-area h-60 items-center flex justify-between w-11/12 m-auto ">
-                <div class="mentor-sign mt-48 flex flex-col justify-center items-center">
-                  <img src="../../images/img.png" alt="signature">
-                  <p class="text-xs font-medium ">Mentor's Sign</p>
-                </div>
-                <div class="office-seal flex flex-col justify-center items-center ">
-                  <img src="../../images/sorobindu_seal.png" alt="signature">
-                  <p class="text-xs font-medium ">Office Seal</p>
-                </div>
-                <div class="principal-sign mt-48 flex flex-col justify-center items-center">
-                  <img src="../../images/img (1).png" alt="signature">
-                  <p class="text-xs font-medium ">Principal's Sign</p>
-                </div>
-              </div>
-              <div class="discalimer">
-                <p class="py-5 w-11/12 block m-auto text-xs font-medium">NB : <span class="font-normal">Lorem ipsum
-                    dolor sit amet
-                    consectetur, adipisicing
-                    elit. Beatae at in quasi eos fugit
-                    possimus doloribus quam qui iusto rerum.</span></p>
-              </div>
-
-
-            </div>
           </div>
 
           <!-- student profile -->
