sass file error solve

--- a/public/pages/dashboard/dashboard.html
+++ b/public/pages/dashboard/dashboard.html
@@ -7,6 +7,7 @@
   <title>Dashboard | Student Result Management System</title>
   <link rel="stylesheet" href="../../src/css/style.css" />
   <link rel="stylesheet" href="../../src/css/custom.css" />
+  <link rel="stylesheet" href="../../src/css/main.css">
   <script src="https://kit.fontawesome.com/2ab099f38c.js" crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet" />
 </head>
