--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Login | Student Result Management System</title>
   <link rel="stylesheet" href="./public/src/css/style.css">
   <link rel="stylesheet" href="./public/src/css/custom.css">
+  <link rel="stylesheet" href="./public/src/css/main.css">
   <script src="https://kit.fontawesome.com/2ab099f38c.js" crossorigin="anonymous"></script>
 </head>
 
